--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple Chat</title>
+    <title>opAIda Chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
