--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             position: sticky; /* Make it stick to the top */
             top: 0; /* Stick to the very top */
             z-index: 1; /* Ensure it's above other content */
+            overflow: hidden; /* Prevent image spillover */
+            height: 200px; /* Set an initial height */
         }
 
         #divider {
@@ -49,7 +51,9 @@
 
         #uploaded-image {
             max-width: 100%;
-            max-height: 150px;
+            /* max-height: 150px; REMOVED */
+            max-height: 100%; /* Allow image to fill height, but don't force stretch */
+            object-fit: contain; /* Scale while maintaining aspect ratio */
         }
 
         #input-container {
@@ -141,9 +145,29 @@
              margin-top: 5px; /* Add space above image if there's text */
         }
 
+        /* Style for the clear chat button */
+        #clear-chat-button {
+            position: fixed; /* Or absolute relative to a container */
+            top: 10px;
+            right: 10px;
+            padding: 8px 12px;
+            background-color: #f44336; /* Red color */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            z-index: 10; /* Ensure it's above other elements */
+            font-size: 14px;
+        }
+
+        #clear-chat-button:hover {
+            background-color: #d32f2f; /* Darker red on hover */
+        }
+
     </style>
 </head>
 <body>
+    <button id="clear-chat-button">Clear Chat</button> <!-- Added Clear Chat Button -->
     <div id="main-container">
         <div id="image-container">
             <img id="uploaded-image" src="" alt="Uploaded Image">
@@ -151,7 +175,9 @@
 
         <div id="divider"></div>
 
-        <div id="chat-window"></div>
+        <div id="chat-window">
+            <div class="bot-message" id="initial-bot-message">Got a document? Just snap a pic and ask away — opAIda's here to help!</div>
+        </div>
     </div>
 
     <div id="input-container">
