update the button

--- a/index.html
+++ b/index.html
@@ -151,7 +151,6 @@
             top: 10px;
             right: 10px;
             padding: 8px 12px;
-            background-color: #f44336; /* Red color */
             color: white;
             border: none;
             border-radius: 5px;
@@ -161,13 +160,13 @@
         }
 
         #clear-chat-button:hover {
-            background-color: #d32f2f; /* Darker red on hover */
+            background-color:rgb(154, 154, 154); /* Darker red on hover */
         }
 
     </style>
 </head>
 <body>
-    <button id="clear-chat-button">Clear Chat</button> <!-- Added Clear Chat Button -->
+    <button id="clear-chat-button"><img src="static/red-trash-can-icon.png" alt="Clear Chat" style="height: 1em; vertical-align: middle;"></button> <!-- Replaced text with icon -->
     <div id="main-container">
         <div id="image-container">
             <img id="uploaded-image" src="" alt="Uploaded Image">
